@@ -18,6 +18,7 @@
 package org.apache.hadoop.hdfs;
 
 import java.io.IOException;
+import java.nio.channels.ClosedChannelException;
 import java.util.ArrayList;
 import java.util.concurrent.CountDownLatch;
 import java.util.concurrent.TimeUnit;
@@ -169,12 +170,9 @@ public class TestMultiThreadedHflush {
                 while (true) {
                   try {
                     stm.hflush();
-                  } catch (IOException ioe) {
-                    if (!ioe.toString().contains("DFSOutputStream is closed")) {
-                      throw ioe;
-                    } else {
-                      return;
-                    }
+                  } catch (ClosedChannelException ioe) {
+                    // Expected exception caught. Ignoring.
+                    return;
                   }
                 }
               } catch (Throwable t) {
