@@ -391,6 +391,9 @@ Release 2.1.0-beta - UNRELEASED
 
     HDFS-4910. TestPermission failed in branch-2. (Chuan Liu via cnauroth)
 
+    HDFS-4906. HDFS Output streams should not accept writes after being
+    closed. (atm)
+
   BREAKDOWN OF HDFS-347 SUBTASKS AND RELATED JIRAS
 
     HDFS-4353. Encapsulate connections to peers in Peer and PeerServer classes.
